src/test/deca/context/invalid/langage_essentiel/deuxieme_passe/regle_2_9.deca
// Description:
//    regle 2.9 type = void
//
// Resultats:
//    Ligne 7: Parameter type cannot be void.
class A {
    void f(void x) {
    }
}